--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ag-grid-community": "^19.1.4",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "ngx-webstorage": "^3.0.0-beta.14",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
