--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ag-grid-community": "^19.1.4",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.0",
     "ngx-webstorage": "^3.0.0-beta.14",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -35,9 +36,10 @@
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
