--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
+    "moment": "^2.24.0",
     "ngx-webstorage": "^5.0.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
