--- a/package.json
+++ b/package.json
@@ -11,46 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/all-modules": "^22.0.0",
-    "@ag-grid-community/angular": "^22.0.0",
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/localize": "^9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "bootstrap": "^4.4.1",
-    "file-saver": "^2.0.2",
-    "moment": "^2.24.0",
-    "ngx-webstorage": "^5.0.0",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.3"
+    "@ag-grid-community/all-modules": "22.1.1",
+    "@ag-grid-community/angular": "22.1.2",
+    "@angular/animations": "9.1.9",
+    "@angular/common": "9.1.9",
+    "@angular/compiler": "9.1.9",
+    "@angular/core": "9.1.9",
+    "@angular/forms": "9.1.9",
+    "@angular/localize": "9.1.9",
+    "@angular/platform-browser": "9.1.9",
+    "@angular/platform-browser-dynamic": "9.1.9",
+    "@angular/router": "9.1.9",
+    "@fortawesome/fontawesome-free": "5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "6.2.0",
+    "bootstrap": "4.4.1",
+    "file-saver": "2.0.2",
+    "firebase": "^10.7.1",
+    "moment": "2.24.0",
+    "ngx-webstorage": "5.0.0",
+    "rxjs": "6.5.5",
+    "tslib": "1.11.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@angular/language-service": "~9.1.9",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "@angular-devkit/build-angular": "0.901.7",
+    "@angular/cli": "9.1.7",
+    "@angular/compiler-cli": "9.1.9",
+    "@angular/language-service": "9.1.9",
+    "@types/node": "12.12.26",
+    "codelyzer": "5.2.1",
+    "ts-node": "7.0.1",
+    "tslint": "5.15.0",
+    "typescript": "3.7.5"
   }
 }
